Fix: use open-source Kong 3.6.1 Alpine image compatible with ARM64

--- a/base/kong-deployment.yaml
+++ b/base/kong-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: kong
-          image: kong/kong-gateway:3.6.1.0-alpine
+          image: kong:3.6.1-alpine
           env:
             - name: KONG_DATABASE
               value: "off"
